<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn_activity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/it_username"
        android:layout_width="277dp"
        android:layout_height="61dp"
        android:layout_marginTop="140dp"
        android:width="1sp"
        android:hint="@string/enter_username"
        android:textSize="12sp"
        android:paddingLeft="10sp"
        android:paddingTop="30sp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/it_password"
        android:layout_width="277dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:width="1sp"
        android:backgroundTint="#DCDCDC"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textSize="12sp"
        android:paddingLeft="10sp"
        android:paddingTop="30sp"
        android:inputType="textPassword"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/it_username" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="268dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="268dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btn_home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>