<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btn_about"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_signIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="250dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_about"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="350dp"
        android:layout_height="136dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/give_you_glory"
        android:text="@string/tv_welcome"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="347dp"
        android:layout_height="192dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_about"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/main" />
</androidx.constraintlayout.widget.ConstraintLayout>