<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".WelcomePage_activity">


        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="299dp"
            android:text="@string/btn_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcomeUser"
            android:layout_width="172dp"
            android:layout_height="39dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="18dp"
            android:fontFamily="serif"
            android:text="@string/tv_welcomeUser"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_home" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:fontFamily="cursive"
            android:text="@string/tv_user"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/tv_welcomeUser"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivPlaces"
            android:layout_width="347dp"
            android:layout_height="263dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/tvPlaces"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.219"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcomeUser"
            app:srcCompat="@drawable/alicja_gancarz_12vdz0ggroi_unsplash" />

        <TextView
            android:id="@+id/tvPlaces"
            android:layout_width="283dp"
            android:layout_height="42dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/tv_signseeing"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivReastaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPlaces" />

        <ImageView
            android:id="@+id/ivReastaurant"
            android:layout_width="362dp"
            android:layout_height="253dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRestaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlaces"
            app:srcCompat="@drawable/carlos_lindner_sjbya8daw54_unsplash" />

        <TextView
            android:id="@+id/tvRestaurant"
            android:layout_width="258dp"
            android:layout_height="46dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/restauranger"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivMusser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivReastaurant"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/ivMusser"
            android:layout_width="373dp"
            android:layout_height="249dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/tvMuseer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRestaurant"
            app:srcCompat="@drawable/patrik_carlberg_4bhtmoc_55y_unsplash" />

        <TextView
            android:id="@+id/tvMuseer"
            android:layout_width="125dp"
            android:layout_height="43dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/museer"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ivParker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMusser"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/ivParker"
            android:layout_width="369dp"
            android:layout_height="252dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/tvParker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMuseer"
            app:srcCompat="@drawable/parker" />

        <TextView
            android:id="@+id/tvParker"
            android:layout_width="150dp"
            android:layout_height="43dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/parker"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivParker" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>